refactor connection methods to be DRY